--- a/styles/style.css
+++ b/styles/style.css
@@ -14,12 +14,94 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  position: relative;
+  background-color: #f2f2f2;
+  z-index: -1;
+  display: flex;
+  align-items: center;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  color: #000000; 
+   width: 228px;
+   height: 32px;
+   text-align: center;
+   margin:  auto;
+   font-weight: 600;
+   font-size: x-large;
+   box-sizing: border-box;
+   
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 4;
+}
+
+.header__title {
+  position: absolute;
+  z-index: 3;
+  display: flex;
+  align-items:center; 
+  box-sizing: border-box; 
+  width: 730px;
+  left: 64px;
+  margin: 0;
+  color: #000000;
+}
+
+h1 {
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+}
+
+.header__subtitle {
+ position: absolute;
+ width: 388px;
+ box-sizing: border-box;
+ left: 64px;
+ bottom: 30px;
+ z-index: 4;
+ margin: 0;
+}
+
+.header__link {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  color: #1f1f1f;
+}
+
+header__link_active {
+
+}
+
+
+
+
+.header__main-illustration {
+position: absolute;
+width: 765px;
+height: 608px;
+right: 0;
+bottom: 0;
+z-index: 1;
+}
+
+
+/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента*/ 
 .header__square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: 0;
+  background-color: #2f80ed;
+  
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +111,4 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
