--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+ 
 }
 
 .header {
@@ -22,15 +23,8 @@
 }
 
 .logo {
-  color: #000000; 
-   width: 228px;
-   height: 32px;
-   text-align: center;
-   margin:  auto;
-   font-weight: 600;
-   font-size: x-large;
-   box-sizing: border-box;
-   
+  width: 228px;
+  height: 32px;
 }
 
 .logo_place_header {
@@ -38,34 +32,33 @@
   top: 30px;
   left: 64px;
   z-index: 4;
+  background-image: url(../images/logo_place_header.svg);
 }
 
 .header__title {
-  position: absolute;
   z-index: 3;
-  display: flex;
-  align-items:center; 
-  box-sizing: border-box; 
+  align-items: center;
+  box-sizing: border-box;
   width: 730px;
-  left: 64px;
-  margin: 0;
+  margin: 0 0 0 64px;
   color: #000000;
 }
 
-h1 {
+.h1 {
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
+  color: #000000;
 }
 
 .header__subtitle {
- position: absolute;
- width: 388px;
- box-sizing: border-box;
- left: 64px;
- bottom: 30px;
- z-index: 4;
- margin: 0;
+  position: absolute;
+  width: 388px;
+  box-sizing: border-box;
+  left: 64px;
+  bottom: 30px;
+  z-index: 4;
+  margin: 0;
 }
 
 .header__link {
@@ -75,40 +68,370 @@ h1 {
   color: #1f1f1f;
 }
 
-header__link_active {
-
+.header__main-illustration__img {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
-
-
-
-.header__main-illustration {
-position: absolute;
-width: 765px;
-height: 608px;
-right: 0;
-bottom: 0;
-z-index: 1;
-}
-
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента*/ 
 .header__square-pic {
   height: 568px;
   width: 568px;
   position: absolute;
   right: 0;
   top: 64px;
-  z-index: 0;
+  z-index: -1;
   background-color: #2f80ed;
+}
+
+/*ниже main  блок description*/
+.description {
+  display: flex;
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  /* выше установили ограничения для секции */
+  justify-content: center;
+  margin: 100px 0 0 0;  /*по брифу страница 1*/
+
+}
+
+.two-columns {
+  padding: 100px 0; /*по брифу страница 6*/
+  width: 80%;
+  min-height: auto;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  font-size: 18px;
+  line-height: 1.2;
+  font-style: normal;
+  margin: 0;
+  padding: 0;
+}
+
+.two-columns__main-text {
+  display: flex;
+  flex-flow: column wrap;
+  width: 80%;
+  min-width: 784px;
+  margin: 0;
+  padding: 0;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.two-columns__paragraph {
+  font-size: 24px;
+  line-height: 34px;
+  font-style: normal;
+  list-style: none;
+}
+
+.two-columns__span-accent {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 600;
+  color: #000000;
+}
+
+/*ниже main  блок  digits*/
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 100px 0; /*по брифу страница 1*/
+}
+  
+.section-title {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  padding: 100px 0 20px 0; /*по брифу страница 9*/
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+  color: #000000;
+  margin: 0;
+}
+
+.section-subtitle {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  margin: 0;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  color: #000000;
+}
+
+.table {
+  width: 1100px;
+  margin-bottom: 100px; /*по брифу страница 9*/
+  display: flex;
+  min-height: auto;
+  box-sizing: border-box;
+  justify-content: space-between;
+  flex-direction: column;  
+}
+
+.table__cell {
+  padding-top: 60px;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  justify-content: space-between;
+  flex-direction: row; 
+  }
+
+.td_width {
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 600;
+  color: #000000;
+  padding-bottom: 20px;
+  margin: 0;
+}
+ 
+  .table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #000000; 
+  margin: 0;
+}
+ .table__text-2 {
+  padding-top: 20px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #000000; 
+}
+
+/*ниже main  блок  feynman*/
+.feynman {
+  height: 890px;
+  background-color: #f2f2f2;
+  display: flex;
+  z-index: -2;
+  flex-direction: column;
+  align-items: center;
+  position: relative; 
+}
+
+.feynman__title {
+  width: 648px;
+  margin-top: 100px;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: 600;
+  color: #000000;
+  text-align: center
+}
+
+.feynman__subtitle {
+  padding-top: 70px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  color: #000000;
+}
+  
+.feynman__link {
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+.feynman-illustration__img {
+  position: absolute;
+  width: 867px;
+  height: 637px;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+/*ниже main  блок  kaufman*/
+.kaufman {
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 90px 0; /*по брифу страница 1*/
+  position: relative; 
+  overflow: hidden;
+  z-index: -2;
+}
+
+.kaufman__triangle { 
+  position: absolute;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: -2;
+  background-image: url(../images/kaufman-triangle.svg);
+  top: 0; 
+}
+
+.section-title_theme_dark {
+  display: flex;
+  width: 60%;
+  margin: 0 0 20px 0;
+  padding: 0;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+  color: white;
+  justify-content: center;
+}
+
+.section-subtitle_theme_dark {
+  display: flex;
+  width: 60%;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  color: white;
+  justify-content: center;
+  margin: 0;
+}
+
+.table_theme_dark {
+  width: 1100px;
+  margin-bottom: 90px; 
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;  
+} 
+
+.table__cell_theme_dark {
+  padding-top: 60px;
+  display: flex;
+  align-items: flex-start;
+  margin: 0;
+  justify-content: space-between;
+  flex-direction: row;  
+  }
+
+.td {
+  width: 200px; 
+  margin-top: 80px;
+  padding: 0;
+  justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+}
+
+.table__heading_theme_dark {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 600;
+  color: white;
+  padding-bottom: 20px;
+  margin: 0;
   
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+.table__text_theme_dark {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: white; 
+  margin: 0;
 }
 
+/*ниже main  блок  footer*/
+.footer {
+  background-color: #000000;
+  display: flex;
+  min-height: 350px;
+  align-items: center;
+  position: relative;
+}
+ 
+.footer__columns {
+  width: 90%;
+  margin: 60px auto 40px auto;
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+} 
+
+.logo_place_footer {
+ background-image: url(../images/logo_place_footer.svg);
+}
+
+.footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  color: white;  
+  margin: 18px 0;
+}
+
+ 
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 600;
+  color: white;  
+  margin: 0 0 20px;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.footer__column-links {
+  padding-left: 0;
+  list-style: none;
+  margin: 0 0 16px;
+}
+
+.footer__column-link {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  color: white;  
+}
+ 
+
+
+
+
+ 
