project1 fixed 252 line

--- a/styles/style.css
+++ b/styles/style.css
@@ -249,7 +249,7 @@
   line-height: 1.15;
   font-weight: 600;
   color: #000000;
-  text-align: center
+  text-align: center;
 }
 
 .feynman__subtitle {
