--- a/стили/style.css
+++ b/стили/style.css
@@ -32,7 +32,6 @@
   top: 30px;
   left: 64px;
   z-index: 4;
-  background-image: url(../images/logo_place_header.svg);
 }
 
 .header__title {
@@ -42,26 +41,18 @@
   width: 730px;
   margin: 0 0 0 64px;
   color: #000000;
-}
-
-.h1 {
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
-  color: #000000;
 }
 
 .header__subtitle {
   position: absolute;
   width: 388px;
-  box-sizing: border-box;
   left: 64px;
   bottom: 30px;
   z-index: 4;
   margin: 0;
-}
-
-.header__link {
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
@@ -297,7 +288,6 @@
   width: 877px;
   height: 877px;
   z-index: -2;
-  background-image: url(../images/kaufman-triangle.svg);
   top: 0; 
 }
 
@@ -373,10 +363,10 @@
   background-color: #000000;
   display: flex;
   min-height: 350px;
-  align-items: center;
+
   position: relative;
 }
- 
+
 .footer__columns {
   width: 90%;
   margin: 60px auto 40px auto;
@@ -391,10 +381,6 @@
   flex-direction: column;
   justify-content: space-between;
 } 
-
-.logo_place_footer {
- background-image: url(../images/logo_place_footer.svg);
-}
 
 .footer__author {
   font-size: 18px;
@@ -419,7 +405,7 @@
 .footer__column-links {
   padding-left: 0;
   list-style: none;
-  margin: 0 0 16px;
+  padding: 0 0 16px;
 }
 
 .footer__column-link {
@@ -427,7 +413,7 @@
   line-height: 30px;
   font-weight: normal;
   color: white;  
-}
+
  
 
 
