--- a/styles/style.css
+++ b/styles/style.css
@@ -202,8 +202,7 @@
   line-height: 1.15;
   font-weight: 600;
   color: #000000;
-  padding-bottom: 20px;
-  margin: 0;
+  margin: 0 auto 20px;
 }
  
   .table__text {
@@ -412,7 +411,8 @@
   font-size: 18px;
   line-height: 30px;
   font-weight: normal;
-  color: white;  
+  color: white;
+}  
 
  
 
