--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@
   /* выше установили ограничения для секции */
   position: relative;
   background-color: #f2f2f2;
-  z-index: -1;
   display: flex;
   align-items: center;
 }
@@ -30,16 +29,15 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 4;
+  z-index: 1;
 }
 
 .header__title {
-  z-index: 3;
+  z-index: 2;
   align-items: center;
   box-sizing: border-box;
-  width: 730px;
+  max-width: 730px;
   margin: 0 0 0 64px;
-  color: #000000;
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
@@ -50,15 +48,14 @@
   width: 388px;
   left: 64px;
   bottom: 30px;
-  z-index: 4;
+  z-index: 2;
   margin: 0;
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
-  color: #1f1f1f;
 }
 
-.header__main-illustration__img {
+.header__main-illustration {
   position: absolute;
   width: 765px;
   height: 608px;
@@ -73,23 +70,17 @@
   position: absolute;
   right: 0;
   top: 64px;
-  z-index: -1;
   background-color: #2f80ed;
 }
 
 /*ниже main  блок description*/
 .description {
   display: flex;
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
   justify-content: center;
-  margin: 100px 0 0 0; /*по брифу страница 1*/
+  margin: 100px 0 0 0;
 }
 
 .two-columns {
-  padding: 100px 0; /*по брифу страница 6*/
   width: 80%;
   min-height: auto;
   box-sizing: border-box;
@@ -100,11 +91,11 @@
 }
 
 .two-columns__brief {
-  width: 175px;
+  max-width: 175px;
   color: #2f80ed;
   font-size: 18px;
   line-height: 1.2;
-  font-style: normal;
+  font-weight: normal;
   margin: 0;
   padding: 0;
 }
@@ -113,12 +104,11 @@
   display: flex;
   flex-flow: column wrap;
   width: 80%;
-  min-width: 784px;
   margin: 0;
   padding: 0;
   gap: 30px;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .two-columns__paragraph {
@@ -126,118 +116,89 @@
   line-height: 34px;
   font-style: normal;
   list-style: none;
+  margin-bottom: 30px;
+  margin: 0;
 }
 
 .two-columns__span-accent {
-  font-size: 24px;
-  line-height: 34px;
   font-weight: 600;
-  color: #000000;
 }
 
 /*ниже main  блок  digits*/
-
 .digits {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   margin: 100px 0; /*по брифу страница 1*/
 }
 
 .section-title {
-  display: flex;
-  justify-content: center;
-  width: 60%;
-  padding: 100px 0 20px 0; /*по брифу страница 9*/
+  max-width: 60%;
+  padding: 0 0 20px 0;
   font-size: 60px;
   line-height: 1.15;
   font-weight: 600;
-  color: #000000;
   margin: 0;
+  text-align: center;
 }
 
 .section-subtitle {
-  display: flex;
-  justify-content: center;
   width: 60%;
   margin: 0;
   font-size: 24px;
   line-height: 34px;
   font-weight: normal;
-  color: #000000;
+  text-align: center;
 }
 
 .table {
-  width: 1100px;
-  margin-bottom: 100px; /*по брифу страница 9*/
   display: flex;
-  min-height: auto;
+  width: 1100px;
   box-sizing: border-box;
+  flex-wrap: wrap;
   justify-content: space-between;
-  flex-direction: column;
+  margin: auto;
 }
 
 .table__cell {
   padding-top: 60px;
-  display: flex;
-  list-style: none;
-  margin: 0;
-  justify-content: space-between;
-  flex-direction: row;
-}
-
-.td_width {
   width: 250px;
-  margin: 0;
-  padding: 0;
-  justify-content: flex-start;
-  display: flex;
-  flex-direction: column;
 }
 
 .table__heading {
   font-size: 24px;
   line-height: 1.15;
   font-weight: 600;
-  color: #000000;
-  margin: 0 auto 20px;
+  padding-bottom: 20px;
+  margin: 0;
 }
 
 .table__text {
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
-  color: #000000;
   margin: 0;
-}
-.table__text-2 {
-  padding-top: 20px;
-  margin: 0;
-  font-size: 18px;
-  line-height: 1.2;
-  font-weight: normal;
-  color: #000000;
+  padding-bottom: 20px;
 }
 
 /*ниже main  блок  feynman*/
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   display: flex;
-  z-index: -2;
   flex-direction: column;
   align-items: center;
   position: relative;
 }
 
 .feynman__title {
-  width: 648px;
-  margin-top: 100px;
+  max-width: 648px;
+  margin: 100px 0 0 0;
   font-size: 120px;
   line-height: 1.15;
   font-weight: 600;
-  color: #000000;
   text-align: center;
+  z-index: 1;
 }
 
 .feynman__subtitle {
@@ -245,9 +206,9 @@
   font-size: 36px;
   line-height: 51px;
   font-weight: normal;
-  color: #000000;
   text-align: center;
   margin: 0;
+  z-index: 1;
 }
 
 .feynman__link {
@@ -266,19 +227,20 @@
   height: 637px;
   left: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 0;
+  background-image: url(../images/feynman.png);
 }
 
 /*ниже main  блок  kaufman*/
 .kaufman {
-  background-color: #000000;
+  background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 90px 0; /*по брифу страница 1*/
   position: relative;
   overflow: hidden;
-  z-index: -2;
+  color: white;
 }
 
 .kaufman__triangle {
@@ -286,14 +248,14 @@
   right: -210px;
   width: 877px;
   height: 877px;
-  z-index: -2;
   top: 0;
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
 }
 
 .section-title_theme_dark {
   display: flex;
-  width: 60%;
+  max-width: 60%;
   margin: 0 0 20px 0;
   padding: 0;
   font-size: 60px;
@@ -301,6 +263,7 @@
   font-weight: 600;
   color: white;
   justify-content: center;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
@@ -312,57 +275,24 @@
   color: white;
   justify-content: center;
   margin: 0;
-}
-
-.table_theme_dark {
-  width: 1100px;
-  margin-bottom: 90px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  z-index: 1;
 }
 
 .table__cell_theme_dark {
-  padding-top: 60px;
   display: flex;
   align-items: flex-start;
   margin: 0;
-  justify-content: space-between;
-  flex-direction: row;
-}
-
-.td {
-  width: 200px;
-  margin-top: 80px;
-  padding: 0;
-  justify-content: flex-start;
-  display: flex;
   flex-direction: column;
-}
-
-.table__heading_theme_dark {
-  font-size: 24px;
-  line-height: 1.15;
-  font-weight: 600;
-  color: white;
-  padding-bottom: 20px;
-  margin: 0;
-}
-
-.table__text_theme_dark {
-  font-size: 18px;
-  line-height: 1.2;
-  font-weight: normal;
-  color: white;
-  margin: 0;
+  width: 200px;
+  z-index: 1;
+  padding-top: 80px;
 }
 
 /*ниже main  блок  footer*/
 .footer {
-  background-color: #000000;
+  background-color: #1f1f1f;
   display: flex;
   min-height: 350px;
-
   position: relative;
 }
 
@@ -370,6 +300,7 @@
   width: 90%;
   margin: 60px auto 40px auto;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -378,32 +309,33 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0;
 }
 
 .footer__author {
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
-  color: white;
   margin: 18px 0;
+  color: white;
 }
 
 .footer__column-heading {
   font-size: 18px;
   line-height: 30px;
   font-weight: 600;
+  margin: 0;
   color: white;
-  margin: 0 0 20px;
+  padding-bottom: 20px;
 }
 
 .link {
   text-decoration: none;
 }
 
-.footer__column-links {
-  padding-left: 0;
-  list-style: none;
-  padding: 0 0 16px;
+.footer__social-icon {
+  background-size: 16px;
+  padding-right: 10px;
 }
 
 .footer__column-link {
@@ -411,4 +343,22 @@
   line-height: 30px;
   font-weight: normal;
   color: white;
+}
+
+.footer__column-links {
+  list-style: none;
+  margin: 0;
+  padding: 0 0 16px 0;
+}
+
+.footer__column-link_youtube {
+  color: #f2f2f2;
+}
+
+.footer__column-link_vk {
+  color: #f2f2f2;
+}
+
+.footer__column-link_tiktok {
+  color: #f2f2f2;
 }
