--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -1,5 +1,7 @@
 .cards__description {
-    font-size: 18px;
-    line-height: 23px;
-    font-weight: normal;
-  }
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
