--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,7 +1,9 @@
 .cards {
-    display: flex;
-    width: 920px;
-    margin: 0 auto;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-  }
+  display: flex;
+  width: 920px;
+  margin: 0;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 0;
+  list-style-type: none;
+}
