--- a/blocks/footer/__social-icon/footer__social-icon.css
+++ b/blocks/footer/__social-icon/footer__social-icon.css
@@ -1,5 +1,5 @@
 .footer__social-icon {
-    background-size: 16px;
-    padding-right: 10px;
-  }
-  
+  padding-right: 10px;
+  width: 16px;
+  height: 16px;
+}
