--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,10 +1,9 @@
 .kaufman__triangle {
-    position: absolute;
-    right: -210px;
-    width: 877px;
-    height: 877px;
-    top: 0;
-    background-image: url(/images/kaufman-triangle.svg);
-    background-size: cover;
-    animation: rotation 20s linear infinite;
-  }
+  position: absolute;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  top: 0;
+  background-image: url(../../../images/kaufman-triangle.svg);
+  background-size: cover;
+}
