--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,7 +1,7 @@
 .khan__buy-link {
-    font-size: 30px;
-    line-height: 42px;
-    font-weight: normal;
-    color: #2f80ed;
-  }
-  
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: normal;
+  color: #2f80ed;
+  align-self: flex-start;
+}
