--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,7 +1,10 @@
 .resources__logo-zone {
-    width: 1100px;
-    margin: 80px auto 217px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+  width: 1100px;
+  margin: 80px auto 217px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0;
+  list-style-type: none;
+  font-size: 0;
+}
