--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,6 +1,6 @@
-.resources__link {
+.resources__logo {
+    display: inline-block;
     width: 270px;
     height: 38px;
     margin: 0;
-    text-align: center;
-  }
+}
