--- a/blocks/two-columns/__main-text/two-columns__main-text.css
+++ b/blocks/two-columns/__main-text/two-columns__main-text.css
@@ -1,10 +1,11 @@
 .two-columns__main-text {
-    display: flex;
-    flex-flow: column wrap;
-    width: 80%;
-    margin: 0;
-    padding: 0;
-    gap: 30px;
-    justify-content: center;
-    align-items: flex-start;
-  }
+  display: flex;
+  flex-flow: column wrap;
+  width: 80%;
+  min-width: 784px;
+  margin: 0;
+  padding: 0;
+  gap: 30px;
+  justify-content: center;
+  align-items: flex-start;
+}
