--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,9 +1,11 @@
 .video__iframe {
-    width: 515px;
-    height: 316px;
-    border: 0;
-  }
-  
-  .video__iframe:nth-child(1) {
-    margin-right: 20px;
-  }
+  width: 515px;
+  height: 316px;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.video__iframe:nth-child(1) {
+  margin-right: 20px;
+}
