--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,9 +1,8 @@
 .video__iframes {
-    height: 316px;
-    margin: 50px auto 0;
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    justify-content: center;
-  }
-  
+  flex-wrap: wrap;
+  position: relative;
+  display: flex;
+  padding: 0;
+  margin: 50px auto 0;
+  list-style-type: none;
+}
