--- a/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css
+++ b/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css
@@ -1,10 +1,5 @@
 .section-subtitle_theme_dark {
-  width: 60%;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: normal;
-  color: white;
-  justify-content: center;
-  margin: 0;
   z-index: 1;
+  display: flex;
+  justify-content: center;
 }
